@@ -73,6 +73,7 @@ Bug fixes
  * Using RGBA images no longer crashes with Pillow >= 4.2.0 (Karl Hobley)
  * Copying a page with PostgreSQL search enabled no longer crashes (Bertrand Bordage)
  * Style of the page unlock button was broken (Bertrand Bordage)
+ * Admin search no longer floods browser history (Bertrand Bordage)
 
 
 Upgrade considerations
